# computer-vision-projects

./: Readme.md
Augmented Reality/src/: calibration_data.xml
Camera Filters/: CMakeLists.txt  README.md
Camera Filters/include/projects/project1/: faceDetect.h  filters.hpp  imgDisplay.hpp  vidDisplay.hpp
Camera Filters/src/: CMakeLists.txt  filters.cpp  imgDisplay.cpp  main.cpp  timeBlur.cpp  vidDisplay.cpp
Camera Filters/submission/: readme.txt
Content Based Image Retrieval/: CMakeLists.txt  readme.md
Content Based Image Retrieval/data/: first.csv
Content Based Image Retrieval/include/: functions.hpp  gaborFilter.hpp  texture.hpp
Content Based Image Retrieval/scripts/: build_project.sh
Content Based Image Retrieval/src/: custom.cpp  functions.cpp  gaborFilter.cpp  histogramMatching.cpp  main.cpp  texture.cpp  textureMatching.cpp
Deep Learning/: .gitignore  README.md  analyze.py  experiment.py  inference.py  plot.py  preprocess.py  task4.py  train.py  transfer_learning.py
Deep Learning/checkpoints/: checkpoint.pth  checkpoint_best.pth
Deep Learning/checkpoints/experiment/: checkpoint.pth  checkpoint_best.pth
Deep Learning/checkpoints/transfer_learning_checkpoints/: checkpoint.pth  checkpoint_best.pth  checkpoint_best_87.pth
Deep Learning/checkpoints/transfer_learning_custom/: checkpoint.pth  checkpoint_best.pth
Deep Learning/data/: data.npy  data_extension_epoch20.npy  data_extension_epoch40.npy  data_extension_epoch5.npy  data_extension_epoch50.npy
Deep Learning/models/: custom_convolution.py
Image Segmentation and Detection/: task5.cpp
Image Segmentation and Detection/Segmentation/: filters.cpp  readme.md  task4.cpp  task6.cpp  task9.cpp  thresholded.avi
Image Segmentation and Detection/Segmentation/data/: features.csv  features_query_dnn.csv  features_video.csv
Image Segmentation and Detection/Segmentation/include/: filters.hpp
Image Segmentation and Detection/submission/: CMakeLists.txt  features_dnn.csv  onnx_inference.py  readme.md  task1_and_2.cpp  task3.cpp  task5.cpp
